# FEM_for_CH

./: .gitignore  CMakeLists.txt
src/: assemble_matrix.cpp  assemble_matrix.h  basis_function.cpp  basis_function.h  boundary_function.cpp  boundary_function.h  fe_solution_triangle.cpp  fe_solution_triangle.h  fix_pressure.cpp  fix_pressure.h  gauss_quadrature.cpp  gauss_quadrature.h  generate_info_matrix.cpp  generate_info_matrix.h  initial_function.cpp  initial_function.h  load_vector.cpp  load_vector.h  main.cpp  read_mesh_from_file.cpp  read_mesh_from_file.h  simple_function.cpp  simple_function.h  sparse2triplet.cpp  sparse2triplet.h  treat_boundary.cpp  treat_boundary.h  write_file.cpp  write_file.h
test/: read_from_file.cpp  test_basis_function.cpp  test_gauss_quadrature.cpp  test_openmp.cpp  test_parallel_vector.cpp  test_solve.cpp
